# dino

./: .gitignore  Cargo.toml  README.md  conf.json  conf.txt
src/: main.rs  utils.rs
src/commands/: about.rs  dispatch.rs  mod.rs  ping.rs
src/message/: dispatch.rs
