[package]
name = "dino"
version = "0.1.1"
edition = "2021"
authors = ["Hiro <yirohido@gmail.com>"]
license = "MIT"
description = "Dino Discord Bot"
readme = "README.md"
homepage = "https://github.com/hiro-codes/dino"
repository = "https://github.com/hiro-codes/dino"
keywords = ["dino", "AI", "bot"]
categories = ["web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version="0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
