[package]
name = "dino"
version = "0.1.1"
edition = "2021"
authors = ["Hiro <yirohido@gmail.com>"]
license = "MIT"
description = "Dino Discord Bot"
readme = "README.md"
homepage = "https://github.com/hiro-codes/dino"
repository = "https://github.com/hiro-codes/dino"
keywords = ["dino", "AI", "bot"]
categories = ["web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.156"
serde_json = "1.0.94"
serenity = { version="0.11.5", default-features = false, features = ["client", "cache", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
